# system-monitor

./: \  kr.gooroom.Gooroom-Example.json  meson.build
bbb/: build.ninja  compile_commands.json  gooroom-example-config.h
bbb/meson-logs/: meson-log.txt
data/: kr.gooroom.Gooroom-Example.appdata.xml.in  kr.gooroom.Gooroom-Example.gschema.xml  meson.build
debian/: .control.swp  changelog  control  copyright  files  gooroom-example.substvars
debian/.debhelper/gooroom-example/: dbgsym-build-ids
debian/.debhelper/subin/: dbgsym-build-ids
debian/gooroom-example/DEBIAN/: control  md5sums
obj-x86_64-linux-gnu/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  gooroom-example-config.h  subin-config.h
obj-x86_64-linux-gnu/data/: kr.gooroom.Gooroom-Example.appdata.xml
obj-x86_64-linux-gnu/meson-logs/: install-log.txt  meson-log.txt
obj-x86_64-linux-gnu/src/: gooroom-example  subin  subin-resources.c  subin-resources.h
po/: POTFILES  meson.build
src/: #subin-window.ui#  .gooroom-example-window.c.swp  gooroom-example-application.c  gooroom-example-application.h  gooroom-example-window.c  gooroom-example-window.h  gooroom-example-window.ui~  gooroom-example.gresource.xml  main.c  meson.build  model.h  subin-application.c  subin-application.h  subin-common.c  subin-common.h  subin-proctable.c  subin-proctable.h  subin-tree-view-model.c  subin-tree-view-model.h  subin-view-model-listeners.c  subin-view-model-listeners.h  subin-window.c  subin-window.h  subin-window.ui  subin-window.ui~  subin.gresource.xml  treeview.c  treeview.h
(+11 files in other folders)
